# latticegen

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Readme.md
include/: include.cmake
lib/: CMakeLists.txt
lib/Core/: App.cpp  App.h  BravaisLattice.cpp  BravaisLattice.h  BravaisLattice2D.cpp  BravaisLattice2D.h  BravaisLattice3D.cpp  BravaisLattice3D.h  ComparisonHelpers.h  Exceptions.h  ExponentialMesh.h  Factorial.h  Legendre.cpp  Legendre.h  Logger.cpp  Logger.h  Matrix3D.h  Mute.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  RadialMesh.h  SphericalHarmonics.cpp  SphericalHarmonics.h  StructuralCompare.h  Symmetries.cpp  Symmetries.h  SymmetryOperations.cpp  SymmetryOperations.h  Visitor.h  lm_vector.h
lib/Geometry/: BravaisLattice2D.cpp  BravaisLattice2D.h  BravaisLattice3D.cpp  BravaisLattice3D.h  CrystallographicPointGroups.cpp  CrystallographicPointGroups.h  Cutoff.cpp  Cutoff.h  IrreducibleWedge.cpp  IrreducibleWedge.h  LatticeGenerator.cpp  LatticeGenerator.h  Matrix3D.h  Mesh.cpp  Mesh.h  Neighbors.cpp  Neighbors.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  ShapeFunctions.cpp  ShapeFunctions.h  Shell.cpp  Shell.h  SymmetryElements.cpp  SymmetryElements.h  SymmetryOperations.cpp  SymmetryOperations.h  SymmetryTarnsformationFactory.cpp  SymmetryTarnsformationFactory.h  SymmetryTransformationFactory.cpp  SymmetryTransformationFactory.h  Transformations.cpp  Transformations.h  UnitCell3D.cpp  UnitCell3D.h
lib/Math/: Bessel.h  ClebschGordan.cpp  ClebschGordan.h  CommonFunctions.h  CubicSplineInterpolation.cpp  CubicSplineInterpolation.h  Derivator.cpp  Derivator.h  Factorial.h  IcosahedralQuadrature.cpp  IcosahedralQuadrature.h  Integrator.cpp  Integrator.h  LapackWrapper.cpp  LapackWrapper.h  LebedevQuadrature.cpp  LebedevQuadrature.h  Legendre.cpp  Legendre.h  OctahedralReplicator.h  PolyhedralQuadrature.cpp  PolyhedralQuadrature.h  SphericalHarmonics.cpp  SphericalHarmonics.h  WignerDMatrix.cpp  WignerDMatrix.h
lib/Physics/Common/: ChargeDensity.h  EffectiveCharge.h  ElectrostaticPotential.h  MadelungConstants.cpp  MadelungConstants.h  MultipoleMoments.cpp  MultipoleMoments.h
lib/Physics/Common/CoreElectrons/: EffectiveCharge.h
lib/Physics/CoreElectrons/: AdamsIntegrator.cpp  AdamsIntegrator.h  EnergyUpdate.h  RadialSchrodingerEquation.cpp  RadialSchrodingerEquation.h
lib/Physics/NonRelativistic/: StructureConstants.cpp  StructureConstants.h
lib/Physics/NonRelativistic/CoreElectrons/: AdamsIntegrator.cpp  AdamsIntegrator.h  EnergyUpdate.h  RadialSchrodingerEquation.cpp  RadialSchrodingerEquation.h
lib/Physics/Relativistic/CoreElectrons/: RadialDiracEquation.h
test/: CMakeLists.txt  main.cpp
test/Core/: Test_App.cpp  Test_BravaisLattice.cpp  Test_BravaisLattice2D.cpp  Test_BravaisLattice3D.cpp  Test_CompareHelpers.cpp  Test_ExponentialMesh.cpp  Test_LMContainers.cpp  Test_Legendre.cpp  Test_Point2D.cpp  Test_Point3D.cpp  Test_SphericalHarmonics.cpp  Test_StructuralCompare.cpp  Test_Symmetries.cpp  Test_SymmetryOperations.cpp  Test_Visitor.cpp
test/Geometry/: Test_BravaisLattice2D.cpp  Test_BravaisLattice3D.cpp  Test_CrystallographicPointGroups.cpp  Test_Cutoff.cpp  Test_IrreducibleWedge.cpp  Test_LatticeGenerator.cpp  Test_Mesh.cpp  Test_Neighbors.cpp  Test_Point2D.cpp  Test_Point3D.cpp  Test_ShapeFunctions.cpp  Test_Shell.cpp  Test_SymmetryElements.cpp  Test_SymmetryOperations.cpp  Test_SymmetryTransformationFactory.cpp  Test_Transformations.cpp  Test_UnitCell3D.cpp
test/Math/: TestClebschGordan.cpp  Test_Bessel.cpp  Test_ClebschGordan.cpp  Test_Derivator.cpp  Test_Eigen.cpp  Test_IcosahedralQuadrature.cpp  Test_Integrator.cpp  Test_Interpolation.cpp  Test_Lapack.cpp  Test_LebedevQuadrature.cpp  Test_Legendre.cpp  Test_PolyhedralQuadrature.cpp  Test_SphericalHarmonics.cpp  Test_WignerDMatrix.cpp  Utils.cpp  Utils.h
test/Physics/Common/: Test_Madelung.cpp
test/Physics/CoreElectrons/: Test_RadialSchrodingerEquation.cpp  Utils.cpp  Utils.h
test/Physics/NonRelativistic/: Test_StructureConstants.cpp
test/Physics/NonRelativistic/CoreElectrons/: Test_RadialSchrodingerEquation.cpp
test/TestUtils/: Utils.cpp  Utils.h  base.h  main.cpp
test/Utils/: plot_points.sh
